<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2014 Prateek Srivastava (@f2prateek)
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>

  <string name="app_name">CouchPotato</string>
  <string name="action_settings">Settings</string>

  <!-- Main Activity !-->
  <string name="shutting_down">Shutting down server</string>
  <string name="restarting">Restarting server</string>


  <!-- MovieDBMovie List Fragment !-->
  <string name="movie_list_fragment">Movies</string>
  <string name="empty">This list is empty!</string>
  <string name="failed">Failed to load list.</string>
  <string name="select_items_action">Select Items</string>
  <string name="no_movies">No movies</string>
  <plurals name="selected_items_count">
    <item quantity="one">One item selected</item>
    <item quantity="other">%d items selected</item>
  </plurals>

  <!-- MovieDBMovie Activity !-->
  <string name="action_imdb">IMDB</string>
  <string name="action_play_trailer">Play trailer</string>
  <string name="movie_plot_label">plot</string>
  <string name="movie_genre_label">genre</string>
  <string name="movie_files_label">files</string>
  <string name="movie_directors_label">directors</string>
  <string name="movie_writers_label">writers</string>
  <string name="movie_cast_label">cast</string>
  <string name="movie_runtime_label">runtime</string>
  <string name="title_text_format">%1$s (%2$d)</string>
  <string name="runtime_text_format">&lt;b>%1$d&lt;/b> hrs &lt;b>%2$d&lt;/b> mins</string>
  <string name="rating_text_format">%1$s / 10</string>
  <string name="action_shutdown">Power Off</string>
  <string name="action_restart">Restart</string>
  <string name="action_refresh">Refresh</string>
  <string name="search_title">Search</string>
  <string name="movie_search_hint">Movie name</string>
  <string name="info_not_available">Not available</string>
  <string name="action_add">Add</string>
  <string name="movie_added">Movie Added</string>
  <string name="crew">crew</string>
  <string name="cast">cast</string>
  <string name="info">info</string>
  <string name="artwork">artwork</string>

  <string name="movie_cast_name_format">%1$s as %2$s</string>
  <string name="movie_crew_name_format">%1$s in %2$s</string>

  <!-- Server Setup Activity !-->
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="login">Login</string>
  <string name="required">Required</string>
  <string name="port">Host Port (e.g. 5050)</string>
  <string name="scheme">Host Scheme (e.g. http)</string>
  <string name="host">Host Url (e.g. 192.168.1.100)</string>
  <string name="may_be_incorrect">May be incorrect.</string>
  <string name="invalid_entries">The entries you entered are invalid.</string>
  <string name="invalid_credentials">The username or password you entered is incorrect.</string>
  <string name="network_timeout_error">Could not contact server at %1$s.</string>
  <string name="invalid_host">Could not identify host at %1$s.</string>
  <string name="refreshing">Refreshing</string>

  <!-- Dev !-->
  <string-array name="ln_level_array">
    <item>VERBOSE</item>
    <item>DEBUG</item>
    <item>INFO</item>
    <item>WARN</item>
    <item>ERROR</item>
  </string-array>
  <string name="scalpel">Scalpel</string>
  <string name="draw_views">Draw Views</string>
  <string name="draw_ids">Draw Ids</string>
  <string name="logging">Logging</string>

</resources>