<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright 2013 Prateek Srivastava (@f2prateek)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingRight="@dimen/default_padding"
    android:paddingLeft="@dimen/default_padding"
    android:paddingTop="@dimen/default_padding_small"
    android:orientation="vertical">

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_plot_label"/>

  <TextView android:id="@+id/movie_plot"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/TextAppearance.Movie"/>

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_genre_label"/>

  <TextView android:id="@+id/movie_genres"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/TextAppearance.Movie.Genre"/>

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_cast_label"/>

  <TextView android:id="@+id/movie_cast"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/TextAppearance.Movie.Cast"/>

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_directors_label"/>

  <TextView android:id="@+id/movie_directors"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/TextAppearance.Movie.Directors"/>

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_writers_label"/>

  <TextView android:id="@+id/movie_writers"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/TextAppearance.Movie.Writers"/>

  <TextView android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="?android:attr/listSeparatorTextViewStyle"
      android:text="@string/movie_runtime_label"/>

</LinearLayout>